--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -174,8 +174,17 @@ data:
       {{- end }}
 
     turn:
+      {{- if eq $.Values.turn.serversSource "dns" }}
+      serversSource: dns
+      baseDomain: {{ required ".turn.baseDomain must be configured if .turn.serversSource is set to dns" $.Values.turn.baseDomain  }}
+      discoveryIntervalSeconds: {{ $.Values.turn.discoveryIntervalSeconds }}
+      {{- else if eq $.Values.turn.serversSource "files" }}
+      serversSource: files
       servers: /etc/wire/brig/turn/turn-servers.txt
       serversV2: /etc/wire/brig/turn/turn-servers-v2.txt
+      {{- else }}
+      {{- fail (cat "Invalid value for .turn.serversSource, expected dns or files, got: " $.Values.turn.serversSource) }}
+      {{- end }}
       secret: /etc/wire/brig/secrets/turn-secret.txt
       configTTL: 3600 # 1 hour
       tokenTTL: 43200 # 12 hours
