--- a/charts/nginx-ingress-services/templates/certificate_federator.yaml
+++ b/charts/nginx-ingress-services/templates/certificate_federator.yaml
@@ -1,7 +1,7 @@
 {{- if and .Values.federator.enabled (not .Values.tls.enabled) }}
 {{- fail "TLS is required by federator. Either disable federation or enable tls." }}
 {{- end }}
-{{- if and .Values.tls.enabled .Values.tls.useCertManager }}
+{{- if and .Values.federator.enabled (and .Values.tls.enabled .Values.tls.useCertManager) }}
 apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
