--- a/charts/nginx-ingress-services/templates/certificate_federator.yaml
+++ b/charts/nginx-ingress-services/templates/certificate_federator.yaml
@@ -1,8 +1,8 @@
 {{- if and .Values.federator.enabled (not .Values.tls.enabled) }}
 {{- fail "TLS is required by federator. Either disable federation or enable tls." }}
 {{- end }}
-{{- if and .Values.tls.enabled .Values.tls.useCertManager }}
-apiVersion: cert-manager.io/v1alpha2
+{{- if and .Values.federator.enabled (and .Values.tls.enabled .Values.tls.useCertManager) }}
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: "federator-{{ include "nginx-ingress-services.zone" . | replace "." "-" }}-csr"
@@ -13,8 +13,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   issuerRef:
-    name: letsencrypt-http01
-    kind: Issuer
+    name: {{ .Values.tls.issuer.name }}
+    kind: {{ .Values.tls.issuer.kind }}
   usages:
     - server auth
     - client auth
