--- a/charts/brig/values.yaml
+++ b/charts/brig/values.yaml
@@ -96,6 +96,14 @@ turn:
   # baseDomain: turn.example.com # Must be configured if serversSource is dns
   discoveryIntervalSeconds: 10 # Used only if serversSource is dns
 
+geoip:
+  # When enabling this, .secrets.geoip.accountId, .secrets.geoip.licenseKey and
+  # .secret.geoip.editionIds must be provided.
+  enable: false
+  image:
+    repository: docker.io/maxmindinc/geoipupdate
+    tag: v4.9
+
 tests:
   enableFederationTests: false
 serviceAccount:
