rename enable -> enabled

--- a/charts/brig/templates/deployment.yaml
+++ b/charts/brig/templates/deployment.yaml
@@ -42,11 +42,11 @@ spec:
         - name: "brig-secrets"
           secret:
             secretName: "brig"
-        {{- if .Values.geoip.enable }}
+        {{- if .Values.geoip.enabled }}
         - name: "geoip"
           emptyDir: {}
         {{- end }}
-      {{- if .Values.geoip.enable }}
+      {{- if .Values.geoip.enabled }}
       # Brig needs GeoIP database to be downloaded before it can start.
       initContainers:
         - name: geoipdownload
@@ -89,7 +89,7 @@ spec:
           - name: "turn-servers"
             mountPath: "/etc/wire/brig/turn"
           {{- end }}
-          {{- if .Values.geoip.enable }}
+          {{- if .Values.geoip.enabled }}
           - name: "geoip"
             mountPath: "/usr/share/GeoIP"
           {{- end }}
@@ -145,7 +145,7 @@ spec:
               port: {{ .Values.service.internalPort }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
-        {{- if .Values.geoip.enable }}
+        {{- if .Values.geoip.enabled }}
         - name: geoipupdate
           image: "{{ .Values.geoip.image.repository }}:{{ .Values.geoip.image.tag }}"
           imagePullPolicy: {{ default "" .Values.geoip.imagePullPolicy | quote }}
