--- a/charts/brig/templates/geoip-secret.yaml
+++ b/charts/brig/templates/geoip-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.geoip.enable }}
+{{- if .Values.geoip.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,8 +11,8 @@ metadata:
 type: Opaque
 data:
   {{- with .Values.secrets.geoip }}
-  accountId: {{ required ".secrets.geoip.accountId must be provided when .Values.geoip.enable is True" .accountId | quote }}
-  licenseKey: {{ required ".secrets.geoip.licenseKey must be provided when .Values.geoip.enable is True" .licenseKey | quote }}
-  editionIds: {{ required ".secrets.geoip.editionIds must be provided when .Values.geoip.enable is True" .editionIds | quote }}
+  accountId: {{ required ".secrets.geoip.accountId must be provided when .Values.geoip.enabled is True" .accountId | quote }}
+  licenseKey: {{ required ".secrets.geoip.licenseKey must be provided when .Values.geoip.enabled is True" .licenseKey | quote }}
+  editionIds: {{ required ".secrets.geoip.editionIds must be provided when .Values.geoip.enabled is True" .editionIds | quote }}
   {{- end }}
 {{- end }}
