--- a/charts/brig/values.yaml
+++ b/charts/brig/values.yaml
@@ -99,7 +99,7 @@ turn:
 geoip:
   # When enabling this, .secrets.geoip.accountId, .secrets.geoip.licenseKey and
   # .secret.geoip.editionIds must be provided.
-  enable: false
+  enabled: false
   image:
     repository: docker.io/maxmindinc/geoipupdate
     tag: v4.9
