charts/*: drop wireService label, use app= instead
This aligns labels a bit more with how they look like in other
deployments. In some cases, we were already setting the `app` label,
too.

There's one possible regression:
The wire-server-metrics helm chart configured kube-prometheus-stack to
automatically scrape everything with a wireService label at port http,
path /i/metrics. This will be fixed in a followup, by adding
ServiceProbe resources to each workload that exposes metrics.

--- a/charts/cannon/templates/nginz-service.yaml
+++ b/charts/cannon/templates/nginz-service.yaml
@@ -13,7 +13,7 @@ kind: Service
 metadata:
   name: {{ .Values.service.nginz.name }}
   labels:
-    wireService: cannon
+    app: cannon
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -35,6 +35,6 @@ spec:
       targetPort: {{ .Values.service.nginz.internalPort }}
       protocol: TCP
   selector:
-    wireService: cannon
+    app: cannon
     release: {{ .Release.Name }}
 {{- end }}
