--- a/charts/brig/templates/geoip-secret.yaml
+++ b/charts/brig/templates/geoip-secret.yaml
@@ -4,7 +4,7 @@ kind: Secret
 metadata:
   name: brig-geoip
   labels:
-    wireService: brig
+    app: brig
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
