brig.geoip -> brig.config.geoip
Also encode geoip secrets as base64

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -202,7 +202,7 @@ data:
     {{- end }}
     {{- end }}
 
-    {{- if .Values.geoip.enabled }}
+    {{- if .geoip.enabled }}
     # Shared emptyDir with geoipupdate container
     geoDb: /usr/share/GeoIP/GeoIP2-City.mmdb
     {{- end }}
