--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -89,6 +89,7 @@ library
     , data-timeout >=0.3
     , exceptions >=0.6
     , extended
+    , extra
     , gundeck-types
     , hashable >=1.2
     , http-types >=0.8
@@ -107,6 +108,7 @@ library
     , text >=1.1
     , tinylog >=0.10
     , types-common >=0.16
+    , unliftio
     , uuid >=1.3
     , vector >=0.10
     , wai >=3.0
