--- a/charts/cannon/values.yaml
+++ b/charts/cannon/values.yaml
@@ -5,6 +5,13 @@ image:
   pullPolicy: IfNotPresent
 config:
   logLevel: Info
+  drainOpts:
+    # The following drains a minimum of 400 connections/second
+    # for a total of 10000 over 25 seconds
+    # (if cannon holds more connections, draining will happen at a faster pace)
+    gracePeriodSeconds: 25
+    millisecondsBetweenBatches: 50
+    minBatchSize: 20
 resources:
   requests:
     memory: "256Mi"
