Disable rate limiting for /api-version

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -100,6 +100,7 @@ nginx_conf:
       envs:
       - all
       disable_zauth: true
+      unlimited_requests_endpoint: true
     - path: /users
       envs:
       - all
