--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -84,14 +84,24 @@ library
       Brig.Queue.Types
       Brig.RPC
       Brig.Run
+      Brig.Sem.ActivationKeyStore
+      Brig.Sem.ActivationKeyStore.Cassandra
+      Brig.Sem.ActivationSupply
+      Brig.Sem.ActivationSupply.IO
       Brig.Sem.BudgetStore
       Brig.Sem.BudgetStore.Cassandra
       Brig.Sem.CodeStore
       Brig.Sem.CodeStore.Cassandra
+      Brig.Sem.GalleyAccess
+      Brig.Sem.GalleyAccess.Http
       Brig.Sem.PasswordResetStore
       Brig.Sem.PasswordResetStore.CodeStore
       Brig.Sem.PasswordResetSupply
       Brig.Sem.PasswordResetSupply.IO
+      Brig.Sem.Twilio
+      Brig.Sem.Twilio.IO
+      Brig.Sem.UserKeyStore
+      Brig.Sem.UserKeyStore.Cassandra
       Brig.Sem.UserQuery
       Brig.Sem.UserQuery.Cassandra
       Brig.SMTP
@@ -224,6 +234,7 @@ library
     , imports
     , insert-ordered-containers
     , iproute >=1.5
+    , iso3166-country-codes
     , iso639 >=0.1
     , lens >=3.8
     , lens-aeson >=1.0
