db migration for splash screen
updated cassandra-schema.cql

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -621,6 +621,7 @@ executable galley-schema
       V63_MLSConversationClients
       V64_Epoch
       V65_MLSRemoteClients
+      V66_AddSplashScreen
       Paths_galley
   hs-source-dirs:
       schema/src
