Add swagger-ui HTML which refers to swagger-ui JS/CSS from unpkg.com

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ spar.integration-aws.yaml
 integration-aws.yaml
 DOCKER_ID*
 swagger-ui
+!charts/nginz/static/swagger-ui
 deploy/services-demo/resources/templates/*
 deploy/services-demo/conf/nginz/zwagger-ui/*
 
