--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -124,6 +124,10 @@ nginx_conf:
       - all
       disable_zauth: true
       unlimited_requests_endpoint: true
+    - path: /users/api-docs$
+      envs:
+      - staging
+      disable_zauth: true
     - path: /users
       envs:
       - all
@@ -358,6 +362,10 @@ nginx_conf:
       disable_zauth: true
       envs:
       - all
+    - path: /conversations/api-docs$
+      envs:
+      - staging
+      disable_zauth: true
     - path: /conversations/([^/]*)/otr/messages
       envs:
       - all
@@ -464,6 +472,10 @@ nginx_conf:
       envs:
       - all
     gundeck:
+    - path: /push/api-docs$
+      envs:
+      - staging
+      disable_zauth: true
     - path: /push
       envs:
       - all
