It compiles (though with undefined's and commented out code)

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -93,6 +93,7 @@ library
       Brig.Sem.BudgetStore.Cassandra
       Brig.Sem.CodeStore
       Brig.Sem.CodeStore.Cassandra
+      Brig.Sem.Common
       Brig.Sem.GalleyAccess
       Brig.Sem.GalleyAccess.Http
       Brig.Sem.PasswordResetStore
