Add graceful termination to coturn chart (#2456)
* charts/coturn: add support for graceful termination.

This adds a preStop hook to coturn pods which waits until the number of
active allocations goes to zero before the coturn process is signalled to
terminate. This can be used with an external service discovery mechanism to
enable graceful rolling restarts, by removing each running coturn pod from the
set of active advertised coturn instances in turn.

* changelog: add entry for coturn graceful termination feature.

* charts/coturn: update coturn container image version.

Starting with this version, our coturn image ships with the pre-stop hook
script, which is required for graceful termination.

--- a/charts/coturn/values.yaml
+++ b/charts/coturn/values.yaml
@@ -24,3 +24,15 @@ securityContext:
 
 coturnTurnListenPort: 3478
 coturnMetricsListenPort: 9641
+
+# This chart optionally supports waiting for traffic to drain from coturn
+# before pods are terminated. Warning: coturn does not have any way to steer
+# incoming client traffic away from itself on its own, so this functionality
+# relies on external traffic management (e.g. service discovery for active coturn
+# instances) to prevent clients from sending new requests to pods which are in a
+# terminating state.
+coturnGracefulTermination: false
+# Grace period for terminating coturn pods, after which they will be forcibly
+# terminated. This setting is only effective when coturnGracefulTermination is
+# set to true.
+coturnGracePeriodSeconds: 86400 # one day
