Optionally include backoffice when installing wire-server helm chart (#2490)
* charts/backoffice: Fix docker tag for backoffice-frontend

* charts/wire-server: Add backoffice

Ensure that scripts can handle updating stern version in the backoffice chart

--- a/charts/backoffice/values.yaml
+++ b/charts/backoffice/values.yaml
@@ -2,11 +2,11 @@ replicaCount: 1
 images:
   frontend:
     repository: quay.io/wire/backoffice-frontend
-    tag: 2.93.0
+    tag: 2.87.0
     pullPolicy: IfNotPresent
   stern:
     repository: quay.io/wire/stern
-    tag: 2.93.0
+    tag: do-not-use
     pullPolicy: IfNotPresent
 service:
   internalPort: 8080
