Add reply to mls messaging end-to-end test

--- a/charts/brig/templates/tests/configmap.yaml
+++ b/charts/brig/templates/tests/configmap.yaml
@@ -69,6 +69,10 @@ data:
         host: cargohold.{{ .Release.Namespace }}-fed2.svc.cluster.local
         port: 8080
 
+      cannon:
+        host: cannon.{{ .Release.Namespace }}-fed2.svc.cluster.local
+        port: 8080
+
       # TODO remove this
       federator:
         host: federator.{{ .Release.Namespace }}-fed2.svc.cluster.local
