--- a/tools/db/auto-whitelist/auto-whitelist.cabal
+++ b/tools/db/auto-whitelist/auto-whitelist.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 21225065d665150349c1451aa1276c9dae47b282d5532b251e4ad3a1b3e08061
+-- hash: 561dfb8c435cc015a570a0c4200e1644e0ff4e057450b6360db05466c5b947a7
 
 name:           auto-whitelist
 version:        1.0.0
@@ -66,7 +66,6 @@ executable auto-whitelist
   ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -funbox-strict-fields -threaded -with-rtsopts=-N -with-rtsopts=-T -rtsopts
   build-depends:
       base
-    , brig-types
     , cassandra-util
     , extra
     , imports
@@ -75,4 +74,5 @@ executable auto-whitelist
     , tinylog
     , types-common
     , unliftio
+    , wire-api
   default-language: Haskell2010
